octsympy 0.1.1 (yyyy-mm-dd)
===========================

 *  New commands:

          isscalar
          uplus

 *  IPC system() should work on windows (FIXME: test header load)

 *  improvements to string handling/escaping.

 *  Bug fixes, #88, #90.



octsympy 0.1.0 (2014-08-27)  Pacific Coffee
===========================================

Major Changes
-------------

 *  `sympref` replaces `octsympy_config`.  You can change the Python
    interpreter with `sympref python /path/to/python`.

 *  Unicode pretty-printed output by default.

     -  If you see `?` or other broken characters, try `sympref display
        ascii`.  Then help me get this working on your system!

     -  Or `sympref display flat` to disable pretty-printing.  (You can
        still use the `pretty` command selectively).

 *  Experimental Windows package with Python and SymPy included (look
    Ma, no deps!)  Uses [David Manthey's single file py.exe Python] [1].

   [1]: http://www.orbitals.com/programs/pyexe.html

 *  Lots of new commands:

          atan2           fliplr         isfinite          norm
          ccode           flipud         isna              not
          cond            fortran        jacobian          qr
          conj            ge             laplacian         real
          curl            gradient       le                repmat
          det             gt             lt                svd
          divergence      hessian        lu                toeplitz
          ezplot3         imag           matlabFunction    tril
          ezplot          inv            ne                triu

 *  Preliminary code generation (`ccode`, `fortran` and
    `matlabFunction` functions).  However, `matlabFunction` mostly
    depends on patches not yet in upstream SymPy.

 *  Inequality support.

 *  Assumptions now behave more like the Matlab Symbolic Math Toolbox.


Minor or internal changes
-------------------------
