@@ -27,12 +27,12 @@
 
 function k = cond(A)
 
-  cmd = [ '(A,) = _ins\n'  ...
-          'if not A.is_Matrix:\n' ...
-          '    A = sp.Matrix([A])\n' ...
-          'return (A.condition_number(),)' ];
+  cmd = { '(A,) = _ins'  ...
+          'if not A.is_Matrix:' ...
+          '    A = sp.Matrix([A])' ...
+          'return A.condition_number(),' };
 
-  k = python_cmd_string (cmd, sym(A));
+  k = python_cmd (cmd, sym(A));
 
 end
 
