@@ -28,24 +28,24 @@
 
 function z = ctranspose(x)
 
-  cmd = [ '(x,) = _ins\n' ...
-          '# special case for Boolean terms\n' ...
-          'if x.has(S.true) or x.has(S.false):\n' ...
-          '    def sf(x):\n' ...
-          '        if x in (S.true, S.false):\n' ...
-          '            return x\n' ...
-          '        return x.conjugate()\n' ...
-          '    if x.is_Matrix:\n' ...
-          '        z = x.T\n' ...
-          '        return (z.applyfunc(lambda a: sf(a)), )\n' ...
-          '    else:\n' ...
-          '        return (sf(x), )\n' ...
-          'if x.is_Matrix:\n'  ...
-          '    return ( x.H ,)\n' ...
-          'else:\n' ...
-          '    return ( x.conjugate() ,)' ];
+  cmd = { 'x = _ins[0]' ...
+          '# special case for Boolean terms' ...
+          'if x.has(S.true) or x.has(S.false):' ...
+          '    def sf(x):' ...
+          '        if x in (S.true, S.false):' ...
+          '            return x' ...
+          '        return x.conjugate()' ...
+          '    if x.is_Matrix:' ...
+          '        z = x.T' ...
+          '        return z.applyfunc(lambda a: sf(a)),' ...
+          '    else:' ...
+          '        return sf(x),' ...
+          'if x.is_Matrix:'  ...
+          '    return x.H,' ...
+          'else:' ...
+          '    return x.conjugate(),' };
 
-  z = python_cmd_string (cmd, x);
+  z = python_cmd (cmd, x);
 
 end
 
