@@ -82,28 +82,28 @@ function y = double(x, failerr)
     return
   end
 
-  cmd = [ '(x,) = _ins\n' ...
-          '# special case for zoo, FIXME: good idea?\n' ...
-          'if x == zoo:\n' ...
-          '    return (1,float(sp.oo),0.0)\n' ...
-          'try:\n' ...
-          '    z = float(x)\n'  ...
-          'except TypeError:\n' ...
-          '    flag = 0\n' ...
-          'else:\n' ...
-          '    flag = 1;\n' ...
-          '    return (flag,z,0.0)\n' ...
-          'if (flag == 0):\n' ...
-          '    try:\n' ...
-          '        z = complex(x)\n'  ...
-          '    except TypeError:\n' ...
-          '        flag = 0\n' ...
-          '    else:\n' ...
-          '        flag = 2;\n' ...
-          '        return (flag,z.real,z.imag)\n' ...
-          'return (0,0.0,0.0)' ];
+  cmd = { '(x,) = _ins' ...
+          '# special case for zoo, FIXME: good idea?' ...
+          'if x == zoo:' ...
+          '    return (1, float(sp.oo), 0.0)' ...
+          'try:' ...
+          '    z = float(x)'  ...
+          'except TypeError:' ...
+          '    flag = 0' ...
+          'else:' ...
+          '    flag = 1;' ...
+          '    return (flag, z, 0.0)' ...
+          'if flag == 0:' ...
+          '    try:' ...
+          '        z = complex(x)'  ...
+          '    except TypeError:' ...
+          '        flag = 0' ...
+          '    else:' ...
+          '        flag = 2;' ...
+          '        return (flag, z.real, z.imag)' ...
+          'return (0, 0.0, 0.0)' };
 
-  [flag, A, B] = python_cmd_string (cmd, x);
+  [flag, A, B] = python_cmd (cmd, x);
 
   assert(isnumeric(flag))
   assert(isnumeric(A))
