@@ -29,15 +29,15 @@
 
 function B = fliplr(A)
 
-  cmd = [ '(A,) = _ins\n' ...
-          'if not A.is_Matrix:\n' ...
-          '    A = sp.Matrix([A])\n' ...
-          '_, n = A.shape\n' ...
-          'for j in range(0, int(n/2)):\n' ...
-          '    A.col_swap(j, n-j-1)\n' ...
-          'return (A,)' ];
+  cmd = { '(A,) = _ins' ...
+          'if not A.is_Matrix:' ...
+          '    A = sp.Matrix([A])' ...
+          '_, n = A.shape' ...
+          'for j in range(0, int(n/2)):' ...
+          '    A.col_swap(j, n-j-1)' ...
+          'return A,' };
 
-  B = python_cmd_string(cmd, sym(A));
+  B = python_cmd (cmd, sym(A));
 
 end
 
