@@ -29,15 +29,15 @@
 
 function B = flipud(A)
 
-  cmd = [ '(A,) = _ins\n' ...
-          'if not A.is_Matrix:\n' ...
-          '    A = sp.Matrix([A])\n' ...
-          'm, _ = A.shape\n' ...
-          'for i in range(0, int(m/2)):\n' ...
-          '    A.row_swap(i, m-i-1)\n' ...
-          'return (A,)' ];
+  cmd = { '(A,) = _ins' ...
+          'if not A.is_Matrix:' ...
+          '    A = sp.Matrix([A])' ...
+          'm, _ = A.shape' ...
+          'for i in range(0, int(m/2)):' ...
+          '    A.row_swap(i, m-i-1)' ...
+          'return A,' };
 
-  B = python_cmd_string(cmd, sym(A));
+  B = python_cmd (cmd, sym(A));
 
 end
 
