@@ -28,17 +28,17 @@
 
 function h = horzcat(varargin)
 
-  cmd = [ '_proc = []\n'  ...
-          'for i in _ins:\n'  ...
-          '    if i.is_Matrix:\n'  ...
-          '        _proc.append(i)\n'  ...
-          '    else:\n'  ...
-          '        _proc.append(sp.Matrix([[i]]))\n'  ...
-          'M = sp.Matrix.hstack(*_proc)\n'  ...
-          'return (M,)' ];
+  cmd = { '_proc = []'  ...
+          'for i in _ins:'  ...
+          '    if i.is_Matrix:'  ...
+          '        _proc.append(i)'  ...
+          '    else:'  ...
+          '        _proc.append(sp.Matrix([[i]]))'  ...
+          'M = sp.Matrix.hstack(*_proc)'  ...
+          'return M,' };
 
   varargin = sym(varargin);
-  h = python_cmd_string (cmd, varargin{:});
+  h = python_cmd (cmd, varargin{:});
 
 end
 
