@@ -111,16 +111,16 @@ function F = int(f, x, a, b)
 
 
   %% now do the definite or indefinite integral
-  if definite
-    cmd = [ '(f,x,a,b) = _ins\n'  ...
-            'F = sp.integrate(f, (x, a, b))\n'  ...
-            'return (F,)' ];
-    F = python_cmd_string (cmd, sym(f), sym(x), sym(a), sym(b));
+  if (definite)
+    cmd = { '(f, x, a, b) = _ins'
+            'F = sp.integrate(f, (x, a, b))'
+            'return F,' };
+    F = python_cmd (cmd, sym(f), sym(x), sym(a), sym(b));
   else
-    cmd = [ '(f,x) = _ins\n'  ...
-            'd = sp.integrate(f, x)\n'  ...
-            'return (d,)' ];
-    F = python_cmd_string (cmd, sym(f), sym(x));
+    cmd = { '(f,x) = _ins'
+            'd = sp.integrate(f, x)'
+            'return d,' };
+    F = python_cmd (cmd, sym(f), sym(x));
   end
 
 end
