@@ -36,15 +36,15 @@ function r = isinf(x)
 
   if isscalar(x)
 
-    cmd = [ 'd = _ins[0].is_unbounded\n'  ...
-            'if (d==True):\n'                ...
-            '    return (True,)\n'           ...
-            'elif (d==False):\n'             ...
-            '    return (False,)\n'          ...
-            'else:\n'                        ...
-            '    return (False,)' ];
+    cmd = { 'd = _ins[0].is_unbounded' ...
+            'if d == True:'            ...
+            '    return True,'         ...
+            'elif d == False:'         ...
+            '    return False,'        ...
+            'else:'                    ...
+            '    return False,' };
 
-    r = python_cmd_string (cmd, x);
+    r = python_cmd (cmd, x);
 
     if (~ islogical(r))
       error('nonboolean return from python');
