@@ -28,31 +28,30 @@
 
 function z = isprime(x)
 
-  %sf = [ 'def sf(x):\n' ...
-  %       '    return x.is_prime' ];
+  %sf = { 'def sf(x):' '    return x.is_prime' };
 
   % could just call uniop_helper but this way we can catch the errors
 
-  sf = [ 'def sf(x):\n' ...
-         '    if not x.is_integer or not x.is_nonnegative:\n' ...
-         '        raise NameError("isprime: input must be nonnegative integer")\n' ...
-         '    r = x.is_prime\n' ...
-         '    if r is None:\n' ...
-         '        raise NameError("isprime: cannot determine if input is prime")\n' ...
-         '    return r' ];
+  sf = { 'def sf(x):' ...
+         '    if not x.is_integer or not x.is_nonnegative:' ...
+         '        raise NameError("isprime: input must be nonnegative integer")' ...
+         '    r = x.is_prime' ...
+         '    if r is None:' ...
+         '        raise NameError("isprime: cannot determine if input is prime")' ...
+         '    return r' };
 
-  cmd = [ sf '\n' ...
-          '(x,) = _ins\n' ...
-          'try:\n' ...
-          '    if x.is_Matrix:\n' ...
-          '        return (True, x.applyfunc(lambda a: sf(a)))\n' ...
-          '    else:\n' ...
-          '        return (True, sf(x))\n' ...
-          'except NameError, e:\n' ...
+  cmd = { sf '' ...
+          '(x,) = _ins' ...
+          'try:' ...
+          '    if x.is_Matrix:' ...
+          '        return (True, x.applyfunc(lambda a: sf(a)))' ...
+          '    else:' ...
+          '        return (True, sf(x))' ...
+          'except NameError, e:' ...
           '    return (False, str(e))' ...
-        ];
+        };
 
-  [r, z] = python_cmd_string(cmd, x);
+  [r, z] = python_cmd (cmd, x);
 
   if (~r)
     error(z)
