@@ -28,10 +28,9 @@
 
 function varargout = latex(x)
 
-  cmd = [ 'd = sp.latex(*_ins)\n'  ...
-          'return (d,)\n' ];
+  cmd = { 'return sp.latex(*_ins),' };
 
-  s = python_cmd_string (cmd, x);
+  s = python_cmd (cmd, x);
 
   if (nargout == 0)
     disp(s)
