@@ -34,21 +34,21 @@ function [L, U, P] = lu(A, opt)
   end
   assert (strcmp(opt, 'matrix') || strcmp(opt, 'vector'))
 
-  cmd = [ '(A,opt) = _ins\n'  ...
-          'if not A.is_Matrix:\n' ...
-          '    A = sp.Matrix([A])\n' ...
-          '(L, U, p) = A.LUdecomposition()\n' ...
-          '# convert list to P\n' ...
-          'n = L.shape[0]\n' ...
-          'if opt == "matrix":\n' ...
-          '    P = sp.eye(n)\n' ...
-          'else:\n' ...
-          '    P = sp.Matrix(range(1, n+1))\n' ...
-          'for w in p:\n' ...
-          '    P.row_swap(*w)\n' ...
-          'return (L, U, P)' ];
+  cmd = { '(A, opt) = _ins'  ...
+          'if not A.is_Matrix:' ...
+          '    A = sp.Matrix([A])' ...
+          '(L, U, p) = A.LUdecomposition()' ...
+          '# convert list to P' ...
+          'n = L.shape[0]' ...
+          'if opt == "matrix":' ...
+          '    P = sp.eye(n)' ...
+          'else:' ...
+          '    P = sp.Matrix(range(1, n+1))' ...
+          'for w in p:' ...
+          '    P.row_swap(*w)' ...
+          'return (L, U, P)' };
 
-  [L, U, P] = python_cmd_string (cmd, sym(A), opt);
+  [L, U, P] = python_cmd (cmd, sym(A), opt);
 
   if (nargout == 2)
     L = P.' * L;
