@@ -22,8 +22,8 @@ function z = double_array_to_sym(A)
     error('conversion not supported for arrays of dim > 2');
   end
 
-  cmd = [ 'L = _ins[0]\n'  ...
-          'M = sp.Matrix(L)\n'  ...
-          'return (M,)' ];
-  z = python_cmd_string (cmd, Ac);
+  cmd = { 'L = _ins[0]' ...
+          'M = sp.Matrix(L)' ...
+          'return M,' };
+  z = python_cmd (cmd, Ac);
 
