@@ -33,13 +33,13 @@ function [Q, R] = qr(A, ord)
     warning('economy-size not implemented')
   end
 
-  cmd = [ '(A,) = _ins\n'  ...
-          'if not A.is_Matrix:\n' ...
-          '    A = sp.Matrix([A])\n' ...
-          '(Q, R) = A.QRdecomposition()\n' ...
-          'return (Q, R)' ];
+  cmd = { 'A = _ins[0]' ...
+          'if not A.is_Matrix:' ...
+          '    A = sp.Matrix([A])' ...
+          '(Q, R) = A.QRdecomposition()' ...
+          'return (Q, R)' };
 
-  [Q, R] = python_cmd_string (cmd, sym(A));
+  [Q, R] = python_cmd (cmd, sym(A));
 
 end
 
