@@ -36,15 +36,15 @@ function z = rdivide(x, y)
   end
 
 
-  cmd = [ '(x,y) = _ins\n'  ...
-          'if x.is_Matrix and y.is_Matrix:\n'  ...
-          '    return ( x.multiply_elementwise(y.applyfunc(lambda a: 1/a)) ,)\n' ...
-          'if not x.is_Matrix and y.is_Matrix:\n'  ...
-          '    return ( y.applyfunc(lambda a: x/a) ,)\n' ...
-          'else:\n' ...
-          '    return ( x/y ,)' ];
+  cmd = { '(x,y) = _ins'  ...
+          'if x.is_Matrix and y.is_Matrix:'  ...
+          '    return x.multiply_elementwise(y.applyfunc(lambda a: 1/a)),' ...
+          'if not x.is_Matrix and y.is_Matrix:'  ...
+          '    return y.applyfunc(lambda a: x/a),' ...
+          'else:' ...
+          '    return x/y,' };
 
-  z = python_cmd_string (cmd, sym(x), sym(y));
+  z = python_cmd (cmd, sym(x), sym(y));
 
 end
 
