@@ -29,16 +29,16 @@
 
 function B = repmat(A, n, m)
 
-  cmd = [ '(A,n,m) = _ins\n' ...
-          'if not A.is_Matrix:\n' ...
-          '    A = sp.Matrix([A])\n' ...
-          'L = [A]*m\n' ...
-          'B = sp.Matrix.hstack(*L)\n' ...
-          'L = [B]*n\n' ...
-          'B = sp.Matrix.vstack(*L)\n' ...
-          'return (B,)' ];
+  cmd = { '(A,n,m) = _ins' ...
+          'if not A.is_Matrix:' ...
+          '    A = sp.Matrix([A])' ...
+          'L = [A]*m' ...
+          'B = sp.Matrix.hstack(*L)' ...
+          'L = [B]*n' ...
+          'B = sp.Matrix.vstack(*L)' ...
+          'return B,' };
 
-  B = python_cmd_string(cmd, sym(A), int32(n), int32(m));
+  B = python_cmd (cmd, sym(A), int32(n), int32(m));
 
 end
 
