@@ -45,15 +45,14 @@ function z = reshape(a, n, m)
     n = n(1);
   end
 
-  cmd = [ '(A,n,m) = _ins\n'  ...
-          'if A.is_Matrix:\n'  ...
-          '    #return ( A.reshape(n,m) ,)\n' ...
-          '    #sympy is row-based\n' ...
-          '    return ( A.T.reshape(m,n).T ,)\n' ...
-          'else:\n' ...
-          '    return ( A ,)' ];
+  cmd = { '(A, n, m) = _ins' ...
+          'if A.is_Matrix:' ...
+          '    #sympy is row-based' ...
+          '    return A.T.reshape(m,n).T,' ...
+          'else:' ...
+          '    return A,' };
 
-  z = python_cmd_string(cmd, sym(a), int32(n), int32(m));
+  z = python_cmd (cmd, sym(a), int32(n), int32(m));
 
 end
 
