@@ -36,13 +36,13 @@ function z = times(x, y)
   end
 
 
-  cmd = [ '(x,y) = _ins\n'  ...
-          'if x.is_Matrix and y.is_Matrix:\n'  ...
-          '    return ( x.multiply_elementwise(y) ,)\n' ...
-          'else:\n' ...
-          '    return ( x*y ,)' ];
+  cmd = { '(x,y) = _ins' ...
+          'if x.is_Matrix and y.is_Matrix:' ...
+          '    return x.multiply_elementwise(y),' ...
+          'else:' ...
+          '    return x*y,' };
 
-  z = python_cmd_string (cmd, sym(x), sym(y));
+  z = python_cmd (cmd, sym(x), sym(y));
 
 end
 
