@@ -28,13 +28,13 @@
 
 function z = transpose(x)
 
-  cmd = [ '(x,) = _ins\n'  ...
-          'if x.is_Matrix:\n'  ...
-          '    return (x.T,)\n' ...
-          'else:\n' ...
-          '    return (x,)' ];
+  cmd = { 'x = _ins[0]'  ...
+          'if x.is_Matrix:'  ...
+          '    return x.T,' ...
+          'else:' ...
+          '    return x,' };
 
-  z = python_cmd_string (cmd, x);
+  z = python_cmd (cmd, x);
 
 end
 
