@@ -8,7 +8,12 @@ octsympy 0.1.1 (yyyy-mm-dd)
 
  *  IPC system() should work on windows (FIXME: test header load)
 
- *  improvements to string handling/escaping.
+ *  Improvements to string handling/escaping especially newlines.
+
+     -  Enter a multiline command using a cell array of lines e.g.,
+        `python_cmd({'a = 10' 'return (a, 2*a)'})
+     -  The same applies to `evalpy`.  If you need the old deprecated
+        behaviour, it is still available as `python_cmd_string`.
 
  *  Bug fixes, #88, #90.
 
